# quote-auto

./: .env.example  .gitignore  CLAUDE.md  EXERCISES.md  LICENSE  README.md  pyproject.toml  spec.md
.claude/commands/: extract-quote.md
src/quote_auto/: cli.py  extractor.py  parser.py  storage.py
tests/: test_extractor.py  test_parser.py  test_storage.py
tests/fixtures/: sample_quote.txt
